# ljpa_reworked

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.sqlite-web  README.md  alembic.ini  compose.yml  crew_ai_chart.drawio  database_chart.drawio  pyproject.toml
src/ljpa_reworked/: config.py  crew_workflow.py  database.py  decorators.py  main.py  workflow.py
src/ljpa_reworked/crews/email_generation_crew/: __init__.py  email_generation_crew.py
src/ljpa_reworked/crews/resume_evaluation_crew/: __init__.py  resume_evaluation_crew.py
src/ljpa_reworked/crews/resume_generation_crew/: __init__.py  resume_generation_crew.py
src/ljpa_reworked/crews/vacancy_review_crew/: __init__.py  vacancy_review_crew.py
src/ljpa_reworked/migrations/: env.py
src/ljpa_reworked/migrations/versions/: 0713c52d4b9b_summary_not_optional_for_resume.py  55f99b29f9c6_removed_duplicate_created_at_from_.py  984fd6ede51c_added_processed_field_into_vacancy.py  a7d729fc376e_added_summary_for_resume.py  afa84864b87f_update_visastatus_enum.py  c41f620767fd_make_email_resume_path_nullable.py  c52bfebb9fb5_vacancy_id_for_linkedinposts_is_.py  ef82f8b78416_initial_migration.py  (+3 more)
src/ljpa_reworked/models/: base.py  crewai_pydantic_models.py  database_models.py
src/ljpa_reworked/operations/: __init__.py  email_ops.py  evaluation_ops.py  linkedin_post_ops.py  resume_ops.py  telegram_ops.py  vacancy_ops.py
src/ljpa_reworked/services/: dynamic_rate_limiter.py  linkedin_scraper.py  smtp_client.py  telegram.py
src/ljpa_reworked/tests/: test_crews_dummy.py  test_smtp_client.py  test_telegram.py
src/ljpa_reworked/tools/: __init__.py
(+23 files in other folders)
