[project]
name = "ljpa_reworked"
version = "0.1.0"
authors = [{ name = "WaRKaZz", email = "danilov@duck.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "alembic>=1.16.2",
    "crewai[tools]>=0.148.0",
    "reportlab>=4.4.2",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "thefuzz[speedup]>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ljpa_reworked"]

[tool.hatch.envs.dev]
dependencies = ["pytest"]  # For easy test running in a virtual env

[tool.hatch.envs.dev.scripts]
test = "pytest"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle for better documentation
    "ASYNC",  # Async checks (future-proof for CrewAI)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "D417",  # Missing argument descriptions (optional for now)
    "ASYNC210",  # Ignore if not fully async yet
    "D100", "D101", "D102", "D103",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "src/ljpa_reworked/tests"
